--- a/src/gospelcenter/CenterBundle/Resources/views/AdminCenter/add.html.twig
+++ b/src/gospelcenter/CenterBundle/Resources/views/AdminCenter/add.html.twig
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block adminBody %}
-    <h1>Admin - Add a center</h1>
+    <h1>Add a center</h1>
     
     <form action="{{ path('gospelcenterAdminGlobal_centers_add') }}" method="post" {{ form_enctype(form) }}>
         
