--- a/src/gospelcenter/ImageBundle/Resources/views/Admin/list.html.twig
+++ b/src/gospelcenter/ImageBundle/Resources/views/Admin/list.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block adminBody %}
-    <h1>Admin - Images</h1>
+    <h1>Images</h1>
     
     <section class="tools">
         <a href="{{ path('gospelcenterAdmin_images_add', {'center': center.ref}) }}">Add an image</a>
