--- a/src/gospelcenter/ImageBundle/Resources/views/AdminGlobal/add.html.twig
+++ b/src/gospelcenter/ImageBundle/Resources/views/AdminGlobal/add.html.twig
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block adminBody %}
-    <h1>Admin - Add an image</h1>
+    <h1>Add an image</h1>
     
     <form class="image" action="{{ path('gospelcenterAdminGlobal_images_add') }}" method="post" {{ form_enctype(form) }}>
         <nav class="tools">
