--- a/src/gospelcenter/LocationBundle/Resources/views/Admin/list.html.twig
+++ b/src/gospelcenter/LocationBundle/Resources/views/Admin/list.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block adminBody %}
-    <h1>Admin - Locations</h1>
+    <h1>Locations</h1>
     
     <section class="tools">
         <a href="{{ path('gospelcenterAdmin_locations_add', {'center': center.ref}) }}">Add a location</a>
