--- a/src/gospelcenter/PageBundle/Resources/views/admin.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/admin.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block adminBody %}
-    <h1>Admin - Pages</h1>
+    <h1>Pages</h1>
     <section class="tools">
         {% if tab == 'pages' %}
             <a href="{{ path('gospelcenterAdmin_pages_add', {'center': center.ref}) }}">Add a page</a>
