--- a/web/sass/admin.scss
+++ b/web/sass/admin.scss
@@ -5,6 +5,19 @@
 @import 'table';
 @import 'nav';
 
+#page.admin > header {
+	
+	& > h1 {
+    	position: absolute;
+    	margin-left: 70px;
+    	padding-top: 10px;
+    	font-family: $font-bold;
+    	font-size: 1.3em;
+    	display: block;
+    	margin-top: 0;
+	}
+}
+
 #container {
 
     section.tools {
@@ -266,6 +279,10 @@
             	
             	fieldset.full {
                 	width: 100%;
+                	
+                	input, textarea {
+                    	width: 300px;
+                	}
             	}
             	
             	article {
@@ -710,6 +727,35 @@
     	    }
     	    
     	    
+    	}
+    	
+    	&.delete {
+    	    max-width: 800px;
+    	    
+        	& > p {
+            	font-size: 1.4em;
+        	}
+        	
+        	& > section.details {
+            	margin: 10px;
+            	
+            	h1 {
+                	margin: 0;
+                	font-family: $font-bold;
+            	}
+        	}
+        	
+        	input[type="submit"] {
+            	margin: 0;
+            	width: initial;
+        	}
+        	
+        	input[type="submit"],
+        	a {
+            	display: inline-block;
+            	margin: 5px;
+            	font-size: 1.2em;
+        	}
     	}
     }
 }
