--- a/src/gospelcenter/CelebrationBundle/Resources/views/AdminCelebration/add.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/AdminCelebration/add.html.twig
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block adminBody %}
-    <h1>Admin - Add a celebration</h1>
+    <h1>Add a celebration</h1>
     
     <form class="celebration" action="{{ path('gospelcenterAdmin_celebrations_add', {'center': center.ref}) }}" method="post" {{ form_enctype(form) }}>
     
