--- a/src/gospelcenter/CelebrationBundle/Resources/views/AdminCelebration/edit.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/AdminCelebration/edit.html.twig
@@ -23,12 +23,13 @@
 {% endblock %}
 
 {% block adminBody %}
-    <h1>Admin - Edit a celebration</h1>
+    <h1>Edit a celebration</h1>
     
     <form class="celebration" action="{{ path('gospelcenterAdmin_celebrations_edit', {'center': center.ref, 'celebration': celebration.id}) }}" method="post" {{ form_enctype(form) }}>
         
         <nav class="tools">
     		<input type="submit" class="buttonRounded" />
+    		<a href="{{ path('gospelcenterAdmin_celebrations_delete', {'center': center.ref, 'celebration': celebration.id}) }}" class="buttonRounded">Delete</a>
     	</nav>
         
     	{{ form_errors(form) }}
