--- a/src/gospelcenter/EventBundle/Resources/views/Admin/add.html.twig
+++ b/src/gospelcenter/EventBundle/Resources/views/Admin/add.html.twig
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block adminBody %}
-    <h1>Admin - Add an event</h1>
+    <h1>Add an event</h1>
     
     <form class="event" action="{{ path('gospelcenterAdmin_events_add', {'center': center.ref}) }}" method="post" {{ form_enctype(form) }}>
         
