--- a/src/gospelcenter/EventBundle/Resources/views/Admin/edit.html.twig
+++ b/src/gospelcenter/EventBundle/Resources/views/Admin/edit.html.twig
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block adminBody %}
-    <h1>Admin - Edit an event</h1>
+    <h1>Edit an event</h1>
     
     <form class="event" action="{{ path('gospelcenterAdmin_events_edit', {'center': center.ref, 'event': event.id}) }}" method="post" {{ form_enctype(form) }}>
         
