--- a/src/gospelcenter/LocationBundle/Resources/views/Admin/add.html.twig
+++ b/src/gospelcenter/LocationBundle/Resources/views/Admin/add.html.twig
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block adminBody %}
-    <h1>Admin - Add a location</h1>
+    <h1>Add a location</h1>
     
     <form class="location" action="{{ path('gospelcenterAdmin_locations_add', {'center': center.ref}) }}" method="post" {{ form_enctype(form) }}>
         
