--- a/src/gospelcenter/PageBundle/Resources/views/AdminPageGlobal/edit.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminPageGlobal/edit.html.twig
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block adminBody %}
-    <h1>Admin - Edit a page</h1>
+    <h1>Edit a page</h1>
     
     <form class="page" action="{{ path('gospelcenterAdminGlobal_pages_edit', {'page': objPage.id}) }}" method="post" {{ form_enctype(form) }}>
         <nav class="tools">
