--- a/src/gospelcenter/PageBundle/Resources/views/AdminSlide/add.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminSlide/add.html.twig
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block adminBody %}
-    <h1>Admin - Add a slide</h1>
+    <h1>Add a slide</h1>
     
     <form class="slide" action="{{ path('gospelcenterAdmin_slides_add', {'center': center.ref}) }}" method="post" {{ form_enctype(form) }}>
         <nav class="tools">
