--- a/src/gospelcenter/PageBundle/Resources/views/AdminSlideGlobal/edit.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminSlideGlobal/edit.html.twig
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block adminBody %}
-    <h1>Admin - Edit a slide</h1>
+    <h1>Edit a slide</h1>
     
     <form class="slide" action="{{ path('gospelcenterAdminGlobal_slides_edit', {'slide': slide.id}) }}" method="post" {{ form_enctype(form) }}>
         <nav class="tools">
