--- a/src/gospelcenter/CelebrationBundle/Resources/views/AdminSpeaker/list.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/AdminSpeaker/list.html.twig
@@ -10,10 +10,10 @@
     <table class="main">
         <thead>
             <tr>
-                <th>Firstname</th>
-                <th>Lastname</th>
-                <th>Function</th>
-                <th>Language</th>
+                <th data-sort="string">Firstname</th>
+                <th data-sort="string">Lastname</th>
+                <th data-sort="string">Function</th>
+                <th data-sort="string">Language</th>
             </tr>
         </thead>
         <tbody>
