--- a/src/gospelcenter/CenterBundle/Resources/views/AdminCenter/add.html.twig
+++ b/src/gospelcenter/CenterBundle/Resources/views/AdminCenter/add.html.twig
@@ -3,6 +3,7 @@
 {% block javascripts %}
     {{ parent() }}
     <script type="text/javascript" src="{{ asset('js/form.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('js/addImage.min.js') }}"></script>
 {% endblock %}
 
 {% block stylesheets %}
@@ -18,23 +19,25 @@
 {% block adminBody %}
     <h1>Add a center</h1>
     
-    <form action="{{ path('gospelcenterAdminGlobal_centers_add') }}" method="post" {{ form_enctype(form) }}>
+    <form class="center" action="{{ path('gospelcenterAdminGlobal_centers_add') }}" method="post" {{ form_enctype(form) }}>
         
         <nav class="tools">
     		<input type="submit" class="buttonRounded" />
     	</nav>
+        {{ form_errors(form) }}
         
         {{ form_widget(form.ref, {'attr': {'placeholder': 'Ref'} }) }}
         {{ form_widget(form.name, {'attr': {'placeholder': 'Name'} }) }}
         
-        <fieldset>
-            <h2>Location</h2>
-            {{ form_widget(form.location.address1, {'attr': {'placeholder': 'Address 1'} }) }}
-            {{ form_widget(form.location.address2, {'attr': {'placeholder': 'Address 2'} }) }}
-            {{ form_widget(form.location.postalCode, {'attr': {'placeholder': 'Postal code'} }) }}
-            {{ form_widget(form.location.city, {'attr': {'placeholder': 'City'} }) }}
-            {{ form_widget(form.location.country, {'attr': {'placeholder': 'Country'} }) }}
-        </fieldset>
+        <h2>Location</h2>
+        {{ form_widget(form.location.address1, {'attr': {'placeholder': 'Address 1'} }) }}
+        {{ form_widget(form.location.address2, {'attr': {'placeholder': 'Address 2'} }) }}
+        {{ form_widget(form.location.postalCode, {'attr': {'placeholder': 'Postal code'} }) }}
+        {{ form_widget(form.location.city, {'attr': {'placeholder': 'City'} }) }}
+        {{ form_widget(form.location.country, {'attr': {'placeholder': 'Country'} }) }}
+        
+        <h2>Image</h2>
+        {{ form_widget(form.image.file) }}
         
         {{ form_rest(form) }}
     </form>
