--- a/src/gospelcenter/CenterBundle/Resources/views/AdminVisitor/list.html.twig
+++ b/src/gospelcenter/CenterBundle/Resources/views/AdminVisitor/list.html.twig
@@ -4,10 +4,10 @@
     <table class="main">
         <thead>
             <tr>
-                <th>Firstname</th>
-                <th>Lastname</th>
-                <th>Gender</th>
-                <th>Frequency</th>
+                <th data-sort="string">Firstname</th>
+                <th data-sort="string">Lastname</th>
+                <th data-sort="string">Gender</th>
+                <th data-sort="string">Frequency</th>
             </tr>
         </thead>
         <tbody>
