--- a/src/gospelcenter/ImageBundle/Resources/views/AdminGlobal/edit.html.twig
+++ b/src/gospelcenter/ImageBundle/Resources/views/AdminGlobal/edit.html.twig
@@ -2,7 +2,8 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script type="text/javascript" src="{{ asset('js/form-min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('js/form.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('js/editImage.min.js') }}"></script>
 {% endblock %}
 
 {% block stylesheets %}
@@ -25,7 +26,10 @@
     		<input type="submit" class="buttonRounded" />
     	</nav>
     	
-    	<img src="{{ asset(image.webPath) }}" alt="{{ image.alt }}" />
+    	{{ form_widget(form.file) }}
+    	<div id="editImage" data-input="{{ form.file.vars.id }}">
+    	    <img src="{{ asset(image.webPath) }}" alt="{{ image.alt }}" />
+    	</div>
     	
         {{ form_widget(form.title, {'attr': {'placeholder': 'Title'} }) }}
         {{ form_widget(form.type, {'attr': {'placeholder': 'Type'} }) }}
