--- a/src/gospelcenter/LocationBundle/Resources/views/Admin/list.html.twig
+++ b/src/gospelcenter/LocationBundle/Resources/views/Admin/list.html.twig
@@ -19,11 +19,11 @@
     <table class="main">
         <thead>
             <tr>
-                <th>Name</th>
-                <th>Address</th>
-                <th>Postal Code</th>
-                <th>City</th>
-                <th>Country</th>
+                <th data-sort="string">Name</th>
+                <th data-sort="string">Address</th>
+                <th data-sort="int">Postal Code</th>
+                <th data-sort="string">City</th>
+                <th data-sort="string">Country</th>
             </tr>
         </thead>
         <tbody>
