--- a/src/gospelcenter/PageBundle/Resources/views/AdminPage/youth.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminPage/youth.html.twig
@@ -14,10 +14,10 @@
     <table class="main">
         <thead>
             <tr>
-                <th>Title</th>
-                <th>Slogan</th>
-                <th>Language</th>
-                <th>Sort</th>
+                <th data-sort="string">Title</th>
+                <th data-sort="string">Slogan</th>
+                <th data-sort="string">Language</th>
+                <th data-sort="int">Sort</th>
             </tr>
         </thead>
         <tbody>
