--- a/src/gospelcenter/PeopleBundle/Resources/views/AdminPerson/edit.html.twig
+++ b/src/gospelcenter/PeopleBundle/Resources/views/AdminPerson/edit.html.twig
@@ -5,9 +5,9 @@
     <script type="text/javascript" src="{{ asset('js/form.min.js') }}"></script>
     
     {% if person.image %}
-        <script type="text/javascript" src="{{ asset('js/editImage-min.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('js/editImage.min.js') }}"></script>
     {% else %}
-        <script type="text/javascript" src="{{ asset('js/addImage-min.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('js/addImage.min.js') }}"></script>
     {% endif %}
     
 {% endblock %}
