--- a/src/gospelcenter/PeopleBundle/Resources/views/global.html.twig
+++ b/src/gospelcenter/PeopleBundle/Resources/views/global.html.twig
@@ -1,7 +1,7 @@
 {% extends "::adminGlobal.html.twig" %}
 
 {% block title %}
-    {{ parent() }} - People
+    {{ parent() }} - Contacts
 {% endblock %}
 
 {% block stylesheets %}
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block adminBody %}
-    <h1>Admin - Contacts</h1>
+    <h1>Contacts</h1>
     <section class="tools">
         <a href="{{ path('gospelcenterAdminGlobal_persons_add') }}">Add a contact</a>
     </section>
