--- a/src/gospelcenter/CelebrationBundle/Resources/views/AdminCelebration/add.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/AdminCelebration/add.html.twig
@@ -36,7 +36,7 @@
             
             <fieldset class="full">
                 <fieldset class="column">
-                    <h2>Speaker</h2>
+                    <h2>Speakers</h2>
                     {{ form_widget(form.existingSpeakers) }}
                 </fieldset>
                 
