--- a/src/gospelcenter/CelebrationBundle/Resources/views/AdminCelebration/edit.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/AdminCelebration/edit.html.twig
@@ -43,7 +43,7 @@
             
             <fieldset class="full">
                 <fieldset class="column">
-                    <h2>Speaker</h2>
+                    <h2>Speakers</h2>
                     {{ form_widget(form.existingSpeakers) }}
                 </fieldset>
                 
