--- a/src/gospelcenter/CelebrationBundle/Resources/views/AdminCelebration/list.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/AdminCelebration/list.html.twig
@@ -20,9 +20,9 @@
     <table class="main">
         <thead>
             <tr>
-                <th>Date</th>
-                <th>Time</th>
-                <th>Speaker</th>
+                <th data-sort="int" data-sort-default="desc">Date</th>
+                <th data-sort="int">Time</th>
+                <th data-sort="string">Speaker</th>
             </tr>
         </thead>
         <tbody>
@@ -43,8 +43,8 @@
                 {% endfor %}
                 
                 <tr {% if date(celebration.startingDate) < date("now") %}class="old"{% endif %}{% if date(celebration.startingDate) < date("+6days") %}class="today"{% endif %}>
-                    <td><a href="{{ path('gospelcenterAdmin_celebrations_edit', {'celebration': celebration.id, 'center': center.ref}) }}">{{ celebration.startingDate|date('d F Y') }}</a></td>
-                    <td><a href="{{ path('gospelcenterAdmin_celebrations_edit', {'celebration': celebration.id, 'center': center.ref}) }}">{{ celebration.startingDate|date('H:i') }} - {{ celebration.endingDate|date('H:i') }}</a></td>
+                    <td data-sort-value="{{ celebration.startingDate|date('U') }}"><a href="{{ path('gospelcenterAdmin_celebrations_edit', {'celebration': celebration.id, 'center': center.ref}) }}">{{ celebration.startingDate|date('d F Y') }}</a></td>
+                    <td data-sort-value="{{ celebration.startingDate|date('Hi') }}{{ celebration.startingDate|date('U') }}"><a href="{{ path('gospelcenterAdmin_celebrations_edit', {'celebration': celebration.id, 'center': center.ref}) }}">{{ celebration.startingDate|date('H:i') }} - {{ celebration.endingDate|date('H:i') }}</a></td>
                     <td><a href="{{ path('gospelcenterAdmin_celebrations_edit', {'celebration': celebration.id, 'center': center.ref}) }}">{{ speakers }}</a></td>
                 </tr>
             {% else %}
