--- a/src/gospelcenter/CenterBundle/Resources/views/AdminMember/list.html.twig
+++ b/src/gospelcenter/CenterBundle/Resources/views/AdminMember/list.html.twig
@@ -4,10 +4,10 @@
     <table class="main">
         <thead>
             <tr>
-                <th>Firstname</th>
-                <th>Lastname</th>
-                <th>Gender</th>
-                <th>Member from</th>
+                <th data-sort="string">Firstname</th>
+                <th data-sort="string">Lastname</th>
+                <th data-sort="string">Gender</th>
+                <th data-sort="int">Member from</th>
             </tr>
         </thead>
         <tbody>
@@ -16,7 +16,7 @@
                     <td><a href="{{ path('gospelcenterAdmin_persons_edit', {'person': member.person.id, 'center': center.ref}) }}">{{ member.person.firstname }}</a></td>
                     <td><a href="{{ path('gospelcenterAdmin_persons_edit', {'person': member.person.id, 'center': center.ref}) }}">{{ member.person.lastname }}</a></td>
                     <td><a href="{{ path('gospelcenterAdmin_persons_edit', {'person': member.person.id, 'center': center.ref}) }}">{{ member.person.gender }}</a></td>
-                    <td><a href="{{ path('gospelcenterAdmin_persons_edit', {'person': member.person.id, 'center': center.ref}) }}">{{ member.memberFromDate|date('d F Y') }}</a></td>
+                    <td data-sort-default="{{ member.memberFromDate|date('U') }}"><a href="{{ path('gospelcenterAdmin_persons_edit', {'person': member.person.id, 'center': center.ref}) }}">{{ member.memberFromDate|date('d F Y') }}</a></td>
                 </tr>
             {% else %}
                 <tr><td colspan="4">There are no members.</td></tr>
