--- a/src/gospelcenter/ImageBundle/Resources/views/Admin/list.html.twig
+++ b/src/gospelcenter/ImageBundle/Resources/views/Admin/list.html.twig
@@ -25,16 +25,16 @@
     <table class="main">
         <thead>
             <tr>
-                <th>Title</th>
-                <th>Modified date</th>
-                <th>Type</th>
+                <th data-sort="string">Title</th>
+                <th data-sort="string">Modified date</th>
+                <th data-sort="string">Type</th>
             </tr>
         </thead>
         <tbody>
             {% for image in images %}
                 <tr>
                     <td><a href="{{ path('gospelcenterAdmin_images_edit', {'image': image.id, 'center': center.ref}) }}">{{ image.title }}</a></td>
-                    <td><a href="{{ path('gospelcenterAdmin_images_edit', {'image': image.id, 'center': center.ref}) }}">{{ image.modifiedDate|date('d F Y') }}</a></td>
+                    <td data-sort-value="{{ image.createdDate|date('U') }}"><a href="{{ path('gospelcenterAdmin_images_edit', {'image': image.id, 'center': center.ref}) }}">{{ image.modifiedDate|date('d F Y') }}</a></td>
                     <td><a href="{{ path('gospelcenterAdmin_images_edit', {'image': image.id, 'center': center.ref}) }}">{{ image.type }}</a></td>
                 </tr>
             {% else %}
