--- a/src/gospelcenter/ImageBundle/Resources/views/AdminGlobal/list.html.twig
+++ b/src/gospelcenter/ImageBundle/Resources/views/AdminGlobal/list.html.twig
@@ -19,16 +19,16 @@
     <table class="main">
         <thead>
             <tr>
-                <th>Title</th>
-                <th>Created date</th>
-                <th>Type</th>
+                <th data-sort="string">Title</th>
+                <th data-sort="int" data-sort-default="desc">Created date</th>
+                <th data-sort="string">Type</th>
             </tr>
         </thead>
         <tbody>
             {% for image in images %}
                 <tr>
                     <td><a href="{{ path('gospelcenterAdminGlobal_images_edit', {'image': image.id,}) }}">{{ image.title }}</a></td>
-                    <td><a href="{{ path('gospelcenterAdminGlobal_images_edit', {'image': image.id,}) }}">{{ image.createdDate|date('d F Y') }}</a></td>
+                    <td data-sort-value="{{ image.createdDate|date('U') }}"><a href="{{ path('gospelcenterAdminGlobal_images_edit', {'image': image.id,}) }}">{{ image.createdDate|date('d F Y') }}</a></td>
                     <td><a href="{{ path('gospelcenterAdminGlobal_images_edit', {'image': image.id,}) }}">{{ image.type }}</a></td>
                 </tr>
             {% else %}
