--- a/src/gospelcenter/PageBundle/Resources/views/AdminPageGlobal/list.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminPageGlobal/list.html.twig
@@ -14,9 +14,9 @@
     <table class="main">
         <thead>
             <tr>
-                <th>Title</th>
-                <th>Menu</th>
-                <th>Language</th>
+                <th data-sort="string">Title</th>
+                <th data-sort="string">Menu</th>
+                <th data-sort="string">Language</th>
             </tr>
         </thead>
         <tbody>
