--- a/src/gospelcenter/PageBundle/Resources/views/AdminSlideGlobal/list.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminSlideGlobal/list.html.twig
@@ -14,8 +14,8 @@
     <table class="main">
         <thead>
             <tr>
-                <th>Title</th>
-                <th>Page</th>
+                <th data-sort="string">Title</th>
+                <th data-sort="string">Page</th>
             </tr>
         </thead>
         <tbody>
