--- a/web/sass/admin.scss
+++ b/web/sass/admin.scss
@@ -289,6 +289,7 @@
                 	
                 	h1 {
                     	font-family: $font-bold;
+                    	margin-top: 5px;
                 	}
             	}
         	}
@@ -324,8 +325,8 @@
         	}
         	
         	h2 {
-            	font-family: $font-bold;
-            	font-size: 1.2em;
+            	font-family: $font-light;
+            	font-size: 1.6em;
         	}
         	
         	#locationSearch,
@@ -562,7 +563,14 @@
     	}
     	
     	&.image,
-    	&.slide {
+    	&.slide,
+    	&.center {
+        	
+        	& > h2 {
+            	font-family: $font-bold;
+            	font-size: 1.3em;
+            	margin-top: 30px;
+        	}
         	
         	#addImage {
             	margin: 0 auto 20px;
@@ -570,8 +578,14 @@
         	
         	& > input,
         	& > textarea,
-        	& > select {
-            	margin-left: 25%;
+        	& > select,
+        	& > h2 {
+            	margin-left: 25%;	
+        	}
+        	
+        	& > input,
+        	& > textarea {
+            	width: 49%;
         	}
         	
         	#editImage {
