--- a/web/sass/form.scss
+++ b/web/sass/form.scss
@@ -52,7 +52,7 @@ form {
         display: block;
         width: auto;
         cursor: pointer;
-        margin: 0 auto 40px;
+        margin: 0 auto;
         
         div.edit {
             text-align: center;
