--- a/web/sass/page.scss
+++ b/web/sass/page.scss
@@ -108,14 +108,23 @@ html.js {
                         text-decoration: none;
                         color: $white;
                         
+                        img {
+                            width: 100%;
+                        }
+                        
                         &.empty {
                             border: 1px solid $grayDark;
                             color: $black;
+                            
+                            h1 {
+                                text-align: center;
+                                margin-top: 25%;
+                            }
                         }
                         
                         h1 {
                             text-align: center;
-                            margin-top: 25%;
+                            margin-top: -35%;
                         }
                     }
                     
